[package]
name = "project_name"
version = "0.1.0"
authors = ["Kacper Cholewiński <kacpercholewinski03@gmail.com>"]
edition = "2021"

[dependencies]
crossbow = "*"
log = "0.4"
anyhow = "1.0"
macroquad = "=0.3.7"
admob-android = "0.2.3"
crossbow-android = "0.2.3"
play-core = "0.2.3"

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad", rev = "d67ffe6950cf73df307e2d23aaa4726f14399985" }

[package.metadata]
app_name = "Macroquad"
assets = ["assets"]
icon = "assets/icon.png"

[package.metadata.android]
app_wrapper = "quad"
release_build_targets = ["aarch64-linux-android"]
plugins_remote = ["com.crossbow.admob:admob:0.2.3", "com.crossbow.play_core:play_core:0.2.3"]

[package.metadata.android.manifest]
package = "com.example.ExampleProject"

[package.metadata.android.manifest.uses_sdk]
min_sdk_version = 19
target_sdk_version = 31

[[package.metadata.android.manifest.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.manifest.application.meta_data]]
name = "com.google.android.gms.ads.APPLICATION_ID"
value = "ca-app-pub-3940256099942544~3347511713"

[package.metadata.apple]
release_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]

